# parrot-arch

./: Makefile  README.md  TODOS.md  pyproject.toml
examples/api-agent/: agent_state.py  setup_utils.py
examples/api-agent/plans/: plan_route_calls.py
examples/api-agent/tools/: get_dependencies_for_resource.py  get_resources.py  get_route_definition.py  get_routes_for_resource.py  run_api_call.py
examples/api_agent/: agent_state.py  route_runner.py
examples/api_agent/plans/: plan_route_calls.py
examples/api_agent/tools/: get_routes_for_resource.py  run_api_call.py
examples/api_agent/utils/: state_utils.py
examples/doc_keeper/: doc_keeper.py
src/parrot/: __init__.py  _utils.py  model_runner.py  plan_decorator.py  tasker_decorator.py  tool_decorator.py  tool_runner.py
src/parrot/model_gateway/: model_gateway.py
src/parrot/types/: model_inference_params.py
src/parrot/utils/: __init__.py  tool_decorator.py
tests/: test_tool_decorator.py
