[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "parrot_arch"
version = "0.1.0"
dependencies = [
    "litellm",
    "pydantic",
    "httpx",
]

[tool.setuptools]
packages = {find = {exclude = ["tests", "examples"]}}